--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div id="socials-container">
             <img src="linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/sheetalgupta15/'"/>
-            <img src="github.png" alt="My Github Profile" class="icon" onclick="location.href='https://github.com'"/>
+            <img src="github.png" alt="My Github Profile" class="icon" onclick="location.href='https://github.com/SheetalGupta01'"/>
         </div>
     </div>
 </section>
