--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
             <button class="btn btn-color-2" onclick="window.open('Sheetal CV.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href='file:///Users/sheetalgupta/Documents/GitHub/portfolio/index.html#contact'">Contact Info</button>
+            <button class="btn btn-color-1" onclick="location.href='https://sheetal-portofolio.netlify.app/#contact'">Contact Info</button>
         </div>
         <div id="socials-container">
             <img src="linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/sheetalgupta15/'"/>
