--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!-- Profile -->
 <section id="profile">
     <div class="section__pic-container">
-        <img src="p.jpeg" alt="Sheetal profile picture"/>
+        <img src="p1.jpeg" alt="Sheetal profile picture"/>
     </div>
     <div class="section__text">
         <p class="section__text__p1">Hello I'm</p>
@@ -80,9 +80,9 @@
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">About Me</h1>
     <div class="section-container">
-        <div class="section__pic-container">
+        <!--<div class="section__pic-container">
             <img src="p1.jpeg" alt="profile picture" class="about-pic"/>
-        </div>
+        </div>-->
         <div class="about-details-container">
             <div class="about-containers">
                 <div class="details-container">
@@ -117,20 +117,6 @@
                     <article>
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
-                            <h3>AWS</h3>
-                            <p>Certified</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="checkmark.png" alt="experience icon" class="icon"/>
-                        <div>
-                            <h3>Python</h3>
-                            <p>Intermediate</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="checkmark.png" alt="experience icon" class="icon"/>
-                        <div>
                             <h3>C</h3>
                             <p>Basic</p>
                         </div>
@@ -152,7 +138,21 @@
                     <article>
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
-                            <h3>My SQL</h3>
+                            <h3>SQL</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="checkmark.png" alt="experience icon" class="icon"/>
+                        <div>
+                            <h3>HTML</HTMl></h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="checkmark.png" alt="experience icon" class="icon"/>
+                        <div>
+                            <h3>CSS</h3>
                             <p>Intermediate</p>
                         </div>
                     </article>
@@ -164,22 +164,15 @@
                     <article>
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
-                            <h3>Mongo DB</h3>
-                            <p>Basic</p>
+                            <h3>Python</h3>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
-                            <h3>Git</h3>
-                            <p>Basic</p>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="checkmark.png" alt="experience icon" class="icon"/>
-                        <div>
-                            <h3>Linux</h3>
-                            <p>Basic</p>
+                            <h3>AWS</h3>
+                            <p>Certified</p>
                         </div>
                     </article>
                     <article>
@@ -193,15 +186,22 @@
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
                             <h3>Kubernetes</h3>
-                            <p>Intermediate</p>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="checkmark.png" alt="experience icon" class="icon"/>
+                        <div>
+                            <h3>Linux</h3>
+                            <p>Basic</p>
                         </div>
                     </article>
                 </div>
             </div>
         </div>
-    </div>
+    </div><br><Br>
     <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience' "/>
-</section>
+</section><br><Br>
 <!--Experience-->
 <section id="experience">
     <p class="section__text__p1">Here are some of my Internship Details</p>
@@ -316,9 +316,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><br><br>
     <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects' "/>
 </section>
+<br><Br>
 <!--PROJECTS-->
 <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
