--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- About Section -->
 <section id="about">
     <p class="section__text__p1">Get To Know More</p>
-    <h1 class="title">About Me</h1>
+    <h1 class="title">About Me</h1><br>
     <div class="section-container">
         <!--<div class="section__pic-container">
             <img src="p1.jpeg" alt="profile picture" class="about-pic"/>
@@ -99,7 +99,7 @@
             <div class="text-container">
                 <p>
                     Self-motivated, highly passionate and hardworking fresher looking for an opportunity to work in a challenging organization to utilize skills and knowledge to work for the growth of the organization as well as to enhance my knowledge about new and emerging technology in the IT sector.
-                </p>
+                </p><br><br>
             </div>
         </div>
     </div>
