--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ window.addEventListener("click", function (event) {
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
             <button class="btn btn-color-2" onclick="window.open('Sheetal CV.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href='http://127.0.0.1:5500/#contact'">Contact Info</button>
+            <button class="btn btn-color-1" ><a href="#contact" style="color: white;">Contact Info</button>
         </div>
         <div id="socials-container">
             <img src="linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/sheetalgupta15/'"/>
