--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Projects Link -->
             <li><a href="#projects">Projects</a></li>
             <!-- Contact Link -->
-            <li><a id="myButton">Contact</a></li>
+            <li><a href="#conta" id="myButton">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -87,11 +87,10 @@ window.addEventListener("click", function (event) {
             <!-- Projects Link -->
             <li><a href="#projects"  onclick="toggleMenu()">Projects</a></li>
             <!-- Contact Link -->
-            <li><a onclick="toggleMenu()">Contact</a></li>
+            <li><a href="#contact"  onclick="toggleMenu()">Contact</a></li>
         </div>
     </div>
 </nav>
-
 <!-- Profile -->
 <section id="profile">
     <div class="section__pic-container">
@@ -103,7 +102,7 @@ window.addEventListener("click", function (event) {
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
             <button class="btn btn-color-2" onclick="window.open('Sheetal CV.pdf')">Download CV</button>
-            <button class="btn btn-color-1" ><a href="#contact" style="color: white;">Contact Info</button>
+            <button class="btn btn-color-1" onclick="location.href='https://sheetalgupta01.github.io/portfolio/#contact'">Contact Info</button>
         </div>
         <div id="socials-container">
             <img src="linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/sheetalgupta15/'"/>
