--- a/index.html
+++ b/index.html
@@ -24,45 +24,10 @@
             <!-- Projects Link -->
             <li><a href="#projects">Projects</a></li>
             <!-- Contact Link -->
-            <li><a href="#conta" id="myButton">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 </nav>
-<div id="myPopup" class="popup">
-  <div class="popup-content">
-          <h1 class="title">Get in Touch</h1>
-              <img
-                src="email.png"
-                alt="Email icon"
-                class="icon contact-icon email-icon"
-              />
-              <a href="mailto:thesheetalgupta@gmail.com" style="align-items: center;">thesheetalgupta@gmail.com</a>
-              <br><img
-                src="linkedin.png"
-                alt="LinkedIn icon"
-                class="icon contact-icon"
-              />
-              <a href="https://www.linkedin.com/in/sheetalgupta15/">LinkedIn</a>
-           
-       
-      <button class="btn btn-color-2"  id="closePopup">
-            Close
-        </button>
-  </div>
-</div>
-<script>
-myButton.addEventListener("click", function () {
-    myPopup.classList.add("show");
-});
-closePopup.addEventListener("click", function () {
-    myPopup.classList.remove("show");
-});
-window.addEventListener("click", function (event) {
-    if (event.target == myPopup) {
-        myPopup.classList.remove("show");
-    }
-});
-</script>
 
 <!-- Mobile Navigation -->
 <nav id="hamburger-nav">
@@ -94,7 +59,7 @@ window.addEventListener("click", function (event) {
 <!-- Profile -->
 <section id="profile">
     <div class="section__pic-container">
-        <img src="p1.jpeg" alt="Sheetal profile picture"/>
+        <img src="p.jpeg" alt="Sheetal profile picture"/>
     </div>
     <div class="section__text">
         <p class="section__text__p1">Hello I'm</p>
@@ -102,7 +67,7 @@ window.addEventListener("click", function (event) {
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
             <button class="btn btn-color-2" onclick="window.open('Sheetal CV.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href='https://sheetalgupta01.github.io/portfolio/#contact'">Contact Info</button>
+            <button class="btn btn-color-1" onclick="location.href='https://sheetal-portofolio.netlify.app/#contact'">Contact Info</button>
         </div>
         <div id="socials-container">
             <img src="linkedin.png" alt="My LinkedIn Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/sheetalgupta15/'"/>
@@ -113,11 +78,11 @@ window.addEventListener("click", function (event) {
 <!-- About Section -->
 <section id="about">
     <p class="section__text__p1">Get To Know More</p>
-    <h1 class="title">About Me</h1><br>
+    <h1 class="title">About Me</h1>
     <div class="section-container">
-        <!--<div class="section__pic-container">
+        <div class="section__pic-container">
             <img src="p1.jpeg" alt="profile picture" class="about-pic"/>
-        </div>-->
+        </div>
         <div class="about-details-container">
             <div class="about-containers">
                 <div class="details-container">
@@ -134,7 +99,7 @@ window.addEventListener("click", function (event) {
             <div class="text-container">
                 <p>
                     Self-motivated, highly passionate and hardworking fresher looking for an opportunity to work in a challenging organization to utilize skills and knowledge to work for the growth of the organization as well as to enhance my knowledge about new and emerging technology in the IT sector.
-                </p><br><br>
+                </p>
             </div>
         </div>
     </div>
@@ -173,7 +138,7 @@ window.addEventListener("click", function (event) {
                     <article>
                         <img src="checkmark.png" alt="experience icon" class="icon"/>
                         <div>
-                            <h3>SQL</h3>
+                            <h3>SQL/h3>
                             <p>Basic</p>
                         </div>
                     </article>
@@ -234,9 +199,9 @@ window.addEventListener("click", function (event) {
                 </div>
             </div>
         </div>
-    </div><br><Br>
+    </div>
     <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience' "/>
-</section><br><Br>
+</section>
 <!--Experience-->
 <section id="experience">
     <p class="section__text__p1">Here are some of my Internship Details</p>
@@ -351,10 +316,9 @@ window.addEventListener("click", function (event) {
           </div>
         </div>
       </div>
-    </div><br><br>
+    </div>
     <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects' "/>
 </section>
-<br><Br>
 <!--PROJECTS-->
 <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
